--- a/404.html
+++ b/404.html
@@ -2,4 +2,4 @@
 permalink: /404.html
 ---
 
-<html><body><b>PAGE NOT FOUND<b><body><html>
+<html><body><b>PAGE NOT FOUND<b><a href="https://deverellmanning.github.io/">Return to index</a><body><html>
