Update Dallen's About Me Webpage.html

--- a/Dallen's About Me Webpage.html
+++ b/Dallen's About Me Webpage.html
@@ -411,6 +411,7 @@ Dallen</b></font></font></u> </font>
 <div id="Section2" dir="LTR">
 	<p style="margin-bottom: 0in"><a href="https://padlet.com/scarns/jyl0erw9oax57gbf">Padlet</a></p>
 </div>
+	<a href="https://deverellmanning.github.io/">Return to index</a>
 <h3 class="western"><font face="Trebuchet MS, sans-serif">More about
 Dallen Shurtleff. </font>
 </h3>
