--- a/Dallen's About Me Webpage.html
+++ b/Dallen's About Me Webpage.html
@@ -444,16 +444,16 @@ people. If I meet any of you in Minecraft, that would be great.</font>
 </p>
 <div id="Section3" dir="LTR">
 	<h2 class="western">PICTURES:</h2>
-	<p><span id="Frame2" dir="LTR" style="float: left; width: 7.63in; height: 4.44in; border: none; padding: 0in; background: #9999ff">
+	<p><span id="Frame2" dir="LTR" style="float: left;  border: none; padding: 0in; background: #9999ff">
 		</span></p><p style="margin-top: 0.08in; margin-bottom: 0.08in"><img src="2020_05_28_17_37_50.png" name="graphics2" align="LEFT" width="732" height="426" border="0"><br clear="LEFT"><font size="3"><i>Illustration
 		1: Me Exploding a TNT world in Mincraft</i></font></p>
 	<br><br>
-	<p></p>
+	
 </div>
-<p><span id="Frame1" dir="LTR" style="float: left; width: 7.63in; height: 5.08in; border: none; padding: 0in; background: #9999ff">
-	</span></p><p style="margin-top: 0.08in; margin-bottom: 0.08in"><img src="DSC00861.JPG" name="graphics1" align="LEFT" width="732" height="488" border="0"><br clear="LEFT"><font size="3"><i>Illustration
+<p><span id="Frame1" dir="LTR" style="float: left;  border: none; padding: 0in; background: #9999ff">
+	</span></p><p style="margin-top: 0.08in; margin-bottom: 0.08in"><img src="rsz_dsc00861.jpg" name="graphics1" align="LEFT" width="732" height="488" border="0"><br clear="LEFT"><font size="3"><i>Illustration
 	2: Me Hiking with Siblings</i></font></p>
 <br><br>
 <p></p>
 
-<div id="shimai-world" style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; z-index: 2147483647; pointer-events: none; background: transparent;"></div></body></html>
+	</body></html>
