--- a/Navigation/Sidebar.html
+++ b/Navigation/Sidebar.html
@@ -1,4 +1,4 @@
-<html style="text-align:right"><head></head><body style="border:black double; position:absolute; right:5%;">
+<html><head></head><body style="border:black double;">
         <h3>
             Navigation
         </h3>
