--- a/Navigation/Sidebar.html
+++ b/Navigation/Sidebar.html
@@ -4,10 +4,10 @@
         </h3>
         <list>
             <li>
-                <a url="#">1--1</a>
+                <a url="deverellmanning.github.io">Home Page</a>
             </li>
             <li>
-                <a url="#">1--1</a>
+                <a url="deverellmanning.github.io/Shurtleff Family/index.html">Shurtleff Home Page</a>
             </li>
             <li>
                 <a url="#">1--1</a>
