--- a/Shurtleff Family/index.html
+++ b/Shurtleff Family/index.html
@@ -3,8 +3,8 @@
 <title>Shurtleff Family Website</title>
 </head>
 <body>
-In Progress
-<a url="https://deverellmanning.github.io/">Return to index</a>
+In Progress-Please return to
+<a href="https://deverellmanning.github.io/"> index</a>
 
 </body>
 </html>
