--- a/Navigation/Sidebar.html
+++ b/Navigation/Sidebar.html
@@ -4,13 +4,13 @@
         </h3>
         <list>
             <li>
-                <a url="deverellmanning.github.io">Home Page</a>
+                <a href="deverellmanning.github.io">Home Page</a>
             </li>
             <li>
-                <a url="deverellmanning.github.io/Shurtleff Family/index.html">Shurtleff Home Page</a>
+                <a href="deverellmanning.github.io/Shurtleff Family/index.html">Shurtleff Home Page</a>
             </li>
             <li>
-                <a url="#">1--1</a>
+                <a href="#">1--1</a>
             </li>
         </list>
     
