--- a/Navigation/Sidebar.html
+++ b/Navigation/Sidebar.html
@@ -1,4 +1,6 @@
-<html><head></head><body style="border:black double;">
+<html><head>
+        <base target="_parent">
+        </head><body style="border:black double;">
         <h3>
             Navigation
         </h3>
