Fix Link adresses

--- a/Navigation/Sidebar.html
+++ b/Navigation/Sidebar.html
@@ -6,10 +6,10 @@
         </h3>
         <list>
             <li>
-                <a href="deverellmanning.github.io">Home Page</a>
+                <a href="https://deverellmanning.github.io/">Home Page</a>
             </li>
             <li>
-                <a href="deverellmanning.github.io/Shurtleff Family/index.html">Shurtleff Home Page</a>
+                <a href="https://deverellmanning.github.io/Shurtleff Family/index.html">Shurtleff Home Page</a>
             </li>
             <li>
                 <a href="#">1--1</a>
