Add Style Sheet

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<h1> <b> Welcome </b> </h1>
+<html><head>
+ <link rel="stylesheet" type="text/css" media="screen" href="2.css">
+ </head>
+ <body>
+ 
+ <h1> <b> Welcome </b> </h1>
 <h3>This is the landing page of Deverell's website on gitub pages. Glad your here.</h3>
 
 <hr>
@@ -53,4 +58,4 @@ s.setAttribute('data-timestamp', +new Date());
 </p>
 <script id="dsq-count-scr" src="//https-deverellmanning-github-io.disqus.com/count.js" async></script>
 
-                            
+ </body>
