--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <img src="https://hitwebcounter.com/counter/counter.php?page=7678712&style=0001&nbdigits=5&type=ip&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a>             
 </p>
 <p>
-<div id="disqus_thread" style="border-style: inset;border-color: coral;border-width: 7px;"></div>
+<div id="disqus_thread" style="border-style: inset;border-color: coral;border-width: 7px;background-color:white"></div>
 <script>
 
 /**
