--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 
 <hr>
-<iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" style="position:absolute; right:2%;border:none;" title="Iframe Example" width="20%" ></iframe>
+<iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" style="position:absolute; right:2%;border:none;" title="Iframe Example" width="26%" ></iframe>
 <hr>
-
+Last Updated:10/2/2020.
 <ul class="task-list">
   <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked">404 page</li>
   <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked">about me page</li>
