--- a/Navigation/Sidebar.html
+++ b/Navigation/Sidebar.html
@@ -1,5 +1,6 @@
 <html><head>
         <base target="_parent">
+        <link rel="stylesheet" type="text/css" media="screen" href="Sidebar.css">
         </head><body style="border:black double;">
         <h3>
             Navigation
