--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
 <hr>
 <iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" style="position:absolute; right:2%;border:none;" title="Iframe Example" width="26%" ></iframe>
 
+  <iframe src="https://deverellmanning.github.io/Poll/Test-Poll" style="position:absolute; right:2%;border:none;" title="Iframe Example" width="26%" ></iframe>
 
 <ul class="task-list">
   <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked">404 page</li>
   <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked">about me page</li>
   <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked">family page</li>
-  <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled">…</li>
+  <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled">Add Side Bar</li>
+ <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled">Add First Poll</li>
 </ul>
 <f>
  <hi>  
-Last Updated:10/2/2020.
+Last Updated:10/5/2020.
   </hi>
   </f>
 <p>Number of website hits:
