Fix Sidebar element overlap!

--- a/index.html
+++ b/index.html
@@ -19,16 +19,20 @@
 
 
 <hr>
-<iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" style="position:absolute; right:2%;border:none;" title="Iframe Example" width="26%" ></iframe>
-
-  <iframe src="https://deverellmanning.github.io/Poll/Test-Poll" style="position:absolute; right:2%;border:none;" title="Iframe Example" width="26%" ></iframe>
-
+<div class="sidebar" style="float:right">
+    <br>
+<iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" style="border:none;" title="Iframe Example" width="100%"></iframe>
+    <br>
+    <iframe src="https://deverellmanning.github.io/Poll/Test-Poll" style="border:none;" title="Iframe Example" width="100%"></iframe>
+  </div>
+  
+  
 <ul class="task-list">
   <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked">404 page</li>
   <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked">about me page</li>
   <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked">family page</li>
-  <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled">Add Side Bar</li>
- <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled">Add First Poll</li>
+  <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked">Add Side Bar</li>
+ <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked" >Add First Poll</li>
 </ul>
 <f>
  <hi>  
