Fix a couple of things.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
-<html><head>
- <link rel="stylesheet" type="text/css" media="screen" href="2.css">
+<html>
+ <head>
+   <link rel="stylesheet" type="text/css" media="screen" href="2.css">
  </head>
  <body>
- 
- <h1> <b> Welcome </b> </h1>
-<h3>This is the landing page of Deverell's website on gitub pages. Glad your here.</h3>
-
-<hr>
+ <div class="title">
+    <h1> <b> Welcome </b> </h1>
+    <h3>This is the landing page of Deverell's website on gitub pages. Glad your here.</h3>
+  </div>
+  
+  <div class="maincontent>
 <b>THIS IS A WORK IN PROGRESS</b>
 <hr>
 
-<h4>Links:</h4>
-<a href="Dallen's About Me Webpage.html">About Me Webpage</a> 
- 
- <a href="Shurtleff Family/index.html">Shurtleff Family Webpage</a> 
- 
- <a href="What.html">About Me Webpage</a> 
 
+<div class="links">
+                  <h4>Links:</h4>
+<a href="Dallen's About Me Webpage.html">About Me Webpage</a> |
+ 
+<a href="Shurtleff Family/index.html">Shurtleff Family Webpage</a>| 
+ 
+<a href="What.html">What? test webpage</a> 
+</div>
 
 <hr>
 <div class="sidebar" style="float:right">
@@ -34,9 +38,10 @@
   <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked">Add Side Bar</li>
  <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked" >Add First Poll</li>
 </ul>
+                <div class=footer>
 <f>
  <hi>  
-Last Updated:10/5/2020.
+Last Updated:10/17/2020.
   </hi>
   </f>
 <p>Number of website hits:
@@ -44,6 +49,8 @@ Last Updated:10/5/2020.
 <a href="https://www.hitwebcounter.com" target="_blank">
 <img src="https://hitwebcounter.com/counter/counter.php?page=7678712&style=0001&nbdigits=5&type=ip&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a>             
 </p>
+                </div>  
+                <p></p><br>
 <p>
 <div id="disqus_thread" style="border-style: inset;border-color: coral;border-width: 7px;background-color:white"></div>
 <script>
