--- a/Navigation/Sidebar.html
+++ b/Navigation/Sidebar.html
@@ -13,6 +13,12 @@
                 <a href="https://deverellmanning.github.io/Shurtleff Family/index.html">Shurtleff Home Page</a>
             </li>
             <li>
+                <a href="https://deverellmanning.github.io/about.html">About</a>
+            </li>
+                <li>
+                <a href="#">1--1</a>
+            </li>
+                <li>
                 <a href="#">1--1</a>
             </li>
         </list>
