--- a/Navigation/Sidebar.html
+++ b/Navigation/Sidebar.html
@@ -13,7 +13,7 @@
                 <a href="https://deverellmanning.github.io/Shurtleff Family/index.html">Shurtleff Home Page</a>
             </li>
             <li>
-                <a href="https://deverellmanning.github.io/about.html">About</a>
+                <a href="https://deverellmanning.github.io/About.html">About</a>
             </li>
                 <li>
                 <a href="#">1--1</a>
