--- a/Secure/F11@/index.html
+++ b/Secure/F11@/index.html
@@ -15,12 +15,14 @@
 </head>
 <body>
 <div class="Title">
-<h1>Title</h1>
-<h3>Discrition</h3>
+<h1>Friends</h1>
+<h3>Place to find stuff for this group of freinds</h3>
 </div>
 
 <div class="MainContent">
-
+<p>
+  UNFINISHED
+  </p>
 </div>
 
 <div class="Sidebar">
@@ -31,7 +33,7 @@
 
 <div class="Footer">
 <hr>
-<hi>Last Updated: ???</hi>
+<hi>Last Updated: 10/26/2020</hi>
 <hr>
 
 <a href="https://deverellmanning.github.io"><address>deverellmanning.github.io</address></a>
