--- a/Secure/index.html
+++ b/Secure/index.html
@@ -15,12 +15,13 @@
 </head>
 <body>
 <div class="Title">
-<h1>Title</h1>
-<h3>Discrition</h3>
+<h1>Secure</h1>
+<h3>Login to sub-website</h3>
 </div>
 
 <div class="MainContent">
-
+INPROGRESS
+  <input>
 </div>
 
 <div class="Sidebar">
@@ -31,7 +32,7 @@
 
 <div class="Footer">
 <hr>
-<hi>Last Updated: ???</hi>
+<hi>Last Updated: 10/26/2020</hi>
 <hr>
 
 <a href="https://deverellmanning.github.io"><address>deverellmanning.github.io</address></a>
