--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="links">
                   <h4>Links:</h4>
-<a href="Dallen's About Me Webpage.html">About Me Webpage</a> |
+<a href="Dallen's About Me Webpage.html.notfound">About Me Webpage - Under maintenance</a> |
  
 <a href="Shurtleff Family/index.html">Shurtleff Family Webpage</a>| 
  
