--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <body>
  <div class="title">
     <h1> <b> Welcome </b> </h1>
-    <h3>This is the landing page of Deverell's website on gitub pages. Glad your here.</h3>
+    <h3>This is the landing page of Deverell's website on gitub pages. Glad your here. NOTE: Will not be worked on for a couple months. Please do not esxpect much.</h3>
   </div>
   
   <div class="maincontent>
