--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <body>
  <div class="title">
     <h1> <b> Welcome </b> </h1>
-    <h3>This is the landing page of Deverell's website on gitub pages. Glad your here. NOTE: Will not be worked on for a couple months. Please do not esxpect much.</h3>
+  <h3>This is the landing page of Deverell's website on gitub pages. Glad your here.</h3><p>NOTE: Work on Website is SLOW. Please do not expect much.</p>
   </div>
   
   <div class="maincontent>
@@ -19,7 +19,8 @@
  
 <a href="Shurtleff Family/index.html">Shurtleff Family Webpage</a>| 
  
-<a href="What.html">What? test webpage</a> 
+<a href="What.html">What? test webpage</a> |
+                <a href="Mincraft/index.html">Minecraft Stuff</a>
 </div>
 
 <hr>
@@ -41,7 +42,7 @@
                 <div class=footer>
 <f>
  <hi>  
-Last Updated:10/17/2020.
+Last Updated:2/6/2021.
   </hi>
   </f>
 <p>Number of website hits:
