fix minecraft pagee link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <a href="Shurtleff Family/index.html">Shurtleff Family Webpage</a>| 
  
 <a href="What.html">What? test webpage</a> |
-                <a href="Mincraft/index.html">Minecraft Stuff</a>
+                <a href="Minecraft/index.html">Minecraft Stuff</a>
 </div>
 
 <hr>
