--- a/index.html
+++ b/index.html
@@ -54,21 +54,31 @@ Last Updated:2/6/2021.
                 <p></p><br>
 <p>
                 
-                <!-- begin wwww.htmlcommentbox.com --><div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div><link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" /><script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24MZnynKUBwNvJ1siahyHGC%2F"+"&opts=16862&num=10&ts=1614480262910");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script><!-- end www.htmlcommentbox.com -->
+ <div style=border:normal black; background:white>              
+  <!-- begin wwww.htmlcommentbox.com -->
+    <div id="HCB_comment_box">
+    <a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
+    <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+   <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24MZnynKUBwNvJ1siahyHGC%2F"+"&opts=16862&num=10&ts=1614480262910");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ 
+   </script>
+  <!-- end www.htmlcommentbox.com -->
+ </div>
+  
+
   
   
+  <!--  
 <div id="disqus_thread" style="border-style: inset;border-color: coral;border-width: 7px;background-color:white"></div>
 <script>
-
-/**
+*
 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
+
 var disqus_config = function () {
 this.page.url = https://deverellmanning.github.io/;  // Replace PAGE_URL with your page's canonical URL variable
 this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
-*/
+
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
 s.src = 'https://https-deverellmanning-github-io.disqus.com/embed.js';
@@ -79,5 +89,5 @@ s.setAttribute('data-timestamp', +new Date());
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </p>
 <script id="dsq-count-scr" src="//https-deverellmanning-github-io.disqus.com/count.js" async></script>
-
+*/!-->
  </body>
