--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Last Updated:2/6/2021.
                 <p></p><br>
 <p>
                 
- <div style=border:normal black; background:white>              
+ <div style=black solid; background: lightgray; width: 25%;>              
   <!-- begin wwww.htmlcommentbox.com -->
     <div id="HCB_comment_box">
     <a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
