--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class=footer>
 <f>
  <hi>  
-Last Updated:2/6/2021.
+Last Updated:2/27/2021.
   </hi>
   </f>
 <p>Number of website hits:
@@ -54,7 +54,7 @@ Last Updated:2/6/2021.
                 <p></p><br>
 <p>
                 
- <div style=black solid; background: lightgray; width: 25%;>              
+ <div style="border:black solid; background: lightgray; width: 25%;">              
   <!-- begin wwww.htmlcommentbox.com -->
     <div id="HCB_comment_box">
     <a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
