--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <hr>
 <div class="sidebar" style="float:right">
     <br>
-<iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" style="border:none;" title="Iframe Example" width="100%"></iframe>
+<iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" style="border:none;" title="Side bar" width="100%"></iframe>
     <br>
     <iframe src="https://deverellmanning.github.io/Poll/Test-Poll" style="border:none;" title="Iframe Example" width="100%"></iframe>
   </div>
@@ -54,7 +54,7 @@ Last Updated:2/27/2021.
                 <p></p><br>
 <p>
                 
- <div style="border:black solid; background: lightgray; width: 25%;">              
+ <div style="border:black solid; background: lightgray; width: 67%; left:15%;">              
   <!-- begin wwww.htmlcommentbox.com -->
     <div id="HCB_comment_box">
     <a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
