--- a/Navigation/Sidebar.html
+++ b/Navigation/Sidebar.html
@@ -16,7 +16,7 @@
                 <a href="https://deverellmanning.github.io/About.html">About</a>
             </li>
                 <li>
-                <a href="#">1--1</a>
+                <a href="https://deverellmanning.github.io/Minecraft/index.html">Minecraft</a>
             </li>
                 <li>
                 <a href="#">1--1</a>
