Fix style links

--- a/Minecraft/index.html
+++ b/Minecraft/index.html
@@ -10,8 +10,9 @@
   
   <meta name="robots" content="noindex, nofollow">/*change to all to show up on google*/
 
-<link rel="stylesheet" href="DeverellManning.github.io/CSS/Global.css">
-<link rel="stylesheet" href="DeverellManning.github.io/CSS/styleM.css">
+
+  <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/styleM.css">
+  <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
 
 </head>
 <body>
