--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
  <head>
    <link rel="stylesheet" type="text/css" media="screen" href="2.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="CSS/HTMLCOMMENTBOXSTYLES.css">
  </head>
  <body>
  <div class="title">
