Add link to Eligo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </div>
   
   <div class="maincontent>
-<b>THIS IS A WORK IN PROGRESS</b>
+<u><b>THIS IS A WORK IN PROGRESS</b><u>
 <hr>
 
 
@@ -21,7 +21,8 @@
 <a href="Shurtleff Family/index.html">Shurtleff Family Webpage</a>| 
  
 <a href="What.html">What? test webpage</a> |
-                <a href="Minecraft/index.html">Minecraft Stuff</a>
+                <a href="Minecraft/index.html">Minecraft Stuff</a> |
+                <a href="EligoTextum/index.html">EligoTextum</a>
 </div>
 
 <hr>
