some style stuff
Date updated

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                 <div class=footer>
 <f>
  <hi>  
-Last Updated:2/27/2021.
+Last Updated:3/13/2021.
   </hi>
   </f>
-<p>Number of website hits:
+<p>Number of website hits(Unaccurate?):
 <!-- hitwebcounter Code START -->
 <a href="https://www.hitwebcounter.com" target="_blank">
 <img src="https://hitwebcounter.com/counter/counter.php?page=7678712&style=0001&nbdigits=5&type=ip&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a>             
@@ -56,7 +56,7 @@ Last Updated:2/27/2021.
                 <p></p><br>
 <p>
                 
- <div style="border:black solid; background: lightgray; width: 67%; left:15%;">              
+ <div style="position:relative; border:grey, solid, 3px; background: lightgray; width: 67%; left:15%;">              
   <!-- begin wwww.htmlcommentbox.com -->
     <div id="HCB_comment_box">
     <a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
