Add title/wiki link

--- a/404.html
+++ b/404.html
@@ -2,4 +2,10 @@
 permalink: /404.html
 ---
 
-<html><body><b>PAGE NOT FOUND<b><a href="https://deverellmanning.github.io/">Return to index</a><body><html>
+<html><body>
+  <h1>404</h1>
+  <b>PAGE NOT FOUND</b>Sorry.
+    <a href="https://deverellmanning.github.io/">Return to index<</a>
+      <br>
+      What does 404 mean?
+      Go to <a href="https://en.wikipedia.org/wiki/HTTP_404">Wikipedia Article</a> to find out!<body><html>
