--- a/Art Show/index.html
+++ b/Art Show/index.html
@@ -15,12 +15,38 @@
 </head>
 <body>
 <div class="Title">
-<h1>Title</h1>
-<h3>Discrition</h3>
+<h1>Art Show</h1>
+<h3></h3>
 </div>
 
 <div class="MainContent">
+ <!-- The grid: four columns -->
+<div class="row">
+  <div class="column">
+    <img src="img_nature.jpg" alt="Nature" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="img_snow.jpg" alt="Snow" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="img_mountains.jpg" alt="Mountains" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="img_lights.jpg" alt="Lights" onclick="myFunction(this);">
+  </div>
+</div>
 
+<!-- The expanding image container -->
+<div class="container">
+  <!-- Close the image -->
+  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+
+  <!-- Expanded image -->
+  <img id="expandedImg" style="width:100%">
+
+  <!-- Image text -->
+  <div id="imgtext"></div>
+</div> 
 </div>
 
 <div class="Sidebar">
