--- a/Art Show/index.html
+++ b/Art Show/index.html
@@ -78,6 +78,7 @@
 
 <div class="Extra"></div>
 <style>
+
    /* The grid: Four equal columns that floats next to each other */
 .column {
   float: left;
@@ -89,6 +90,7 @@
 .column img {
   opacity: 0.8;
   cursor: pointer;
+  width:-moz-available
 }
 
 .column img:hover {
@@ -106,6 +108,7 @@
 .container {
   position: relative;
   display: none;
+  scale:60%
 }
 
 /* Expanding image text */
