add from other offline page

--- a/EligoTextum/index.html
+++ b/EligoTextum/index.html
@@ -9,8 +9,8 @@
   
   <meta name="robots" content="noindex, nofollow">/*change to all to show up on google*/
 
-<link rel="stylesheet" href="DeverellManning.github.io/CSS/Global.css">
-<link rel="stylesheet" href="DeverellManning.github.io/CSS/styleM.css">
+<link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
+<link rel="stylesheet" href="https://deverellmanning.github.io/CSS/GreenScheme.css">
 
 </head>
 <body>
@@ -21,6 +21,17 @@
 
 <div class="MainContent">
   <p>This page is going to be about my game, <abbr title="more later">EligoTextum</abbr>.  Currently, it is underprogress. Enjoy?</p>
+  <div class="main"><div class="title"><h1>About EligoTextum</h1></div><div class="text"><p>EligoTextum is a game of <abbr title="Interactive Fiction">IF</abbr>.<br>
+  So, what IS <abbr title="Interactive Fiction">IF</abbr>?</p>
+  <h3>Interactive Fiction</h3>
+  <p>
+    Interactive fiction is NORMALLY fiction, where you are the <abbr title="Main character of a story.">protaganist</abbr>, and you make all the protaganist's choices.
+  <br>Learn more about <a href="https://en.wikipedia.org/wiki/Interactive_fiction">Interactive Fiction</a>
+    
+  </p>
+<img src="../About Me2_files/Half.jpg" style="float:right;right: 100px;">
+</div>
+</div>
 </div>
 
 <div class="Sidebar">
