--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <div class="maincontent>
 <u><b>THIS IS A WORK IN PROGRESS</b><u>
 <hr>
-
+              Please take this Poll:  I'd like to know!
+              /*START*/
+              <form method="post" action="https://poll.pollcode.com/98921798"><div style="background-color:#EEEEEE;padding:2px;width:150px;font-family:Lucida Console;font-size:small;color:#000000;background-image: url('https://images.boardhost.com/bg/clouds.gif');"><div style="padding:2px 0px 4px 2px;"><strong>Choose One</strong></div><input type="radio" name="answer" value="1" id="answer989217981" style="float:left;" /><label for="answer989217981" style="float:left;width:125px;">I don't like your website.</label><div style="clear:both;height:2px;"></div><input type="radio" name="answer" value="2" id="answer989217982" style="float:left;" /><label for="answer989217982" style="float:left;width:125px;"><abbr title="I kindof like it.">I might come monthly!</abbr></label><div style="clear:both;height:2px;"></div><input type="radio" name="answer" value="3" id="answer989217983" style="float:left;" /><label for="answer989217983" style="float:left;width:125px;"><abbr title="I like it!">I'll probally come weekly!</abbr></label><div style="clear:both;height:2px;"></div><input type="radio" name="answer" value="4" id="answer989217984" style="float:left;" /><label for="answer989217984" style="float:left;width:125px;"><abbr title="I'll come often!">Its a <b>GREAT</b> site!</abbr></label><div style="clear:both;height:2px;"></div><input type="radio" name="answer" value="5" id="answer989217985" style="float:left;" /><label for="answer989217985" style="float:left;width:125px;">I like it, but could you add more content?</label><div style="clear:both;height:2px;"></div><div align="center" style="padding:3px;"><input type="submit" value=" Vote ">&nbsp;<input type="submit" name="view" value=" View "></div><div align="right" style="font-size:10px">pollcode.com <a href="https://pollcode.com/">free polls</a></div></div></form>
+              /*END*/
 
 <div class="links">
                   <h4>Links:</h4>
