--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <hr>
               Please take this Poll:  I'd like to know!
               <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script><a href="https://surveynuts.com/en" class="swidget" sid="226677" c="10293855941FRNJ" width="400" height="600" locale="en" scroll="yes">Survey Maker</a><script src="https://surveynuts.com/widget.js" type="text/javascript"></script>
-
+              <iframe src="https://surveynuts.com/surveys/take?id=226677&amp;c=10293855941FRNJ">
+   
+</body></html></iframe>
 <div class="links">
                   <h4>Links:</h4>
 <a href="Dallen's About Me Webpage.html.notfound">About Me Webpage - Under maintenance</a> |
