--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <div class="maincontent>
 <u><b>THIS IS A WORK IN PROGRESS</b><u>
 <hr>
-              <h3><b>Please take this Survey about my website:  I'd like to know!  <a href="https://surveynuts.com/surveys/take?id=226677&c=10293855941FRNJ">survey</a>
+              <h3><b>Please take this Survey about my website:  I'd like to know!</b></h3>  
+              <a href="https://surveynuts.com/surveys/take?id=226677&c=10293855941FRNJ">survey</a>
               
 </body></html></iframe>
 <div class="links">
