--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
   <h3>This is the landing page of Deverell's website on gitub pages. Glad your here.</h3><p>NOTE: Work on Website is SLOW. Please do not expect much.</p>
   </div>
   
-  <div class="maincontent>
+  <div class="maincontent">
 <u><b>THIS IS A WORK IN PROGRESS</b><u>
 <hr>
+ <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script><a href="https://surveynuts.com/en" class="swidget" sid="226677" c="10293855941FRNJ" width="400" height="600" locale="en" scroll="yes">Survey Maker</a><script src="https://surveynuts.com/widget.js" type="text/javascript"></script>
+
+ <iframe src="https://surveynuts.com/surveys/take?id=226677&amp;c=10293855941FRNJ">
+</iframe>
+   
               <h3><b>Please take this Survey about my website:  I'd like to know!</b></h3>  
               <a href="https://surveynuts.com/surveys/take?id=226677&c=10293855941FRNJ">survey</a>
               
