--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
   <div class="maincontent">
 <u><b>THIS IS A WORK IN PROGRESS</b><u>
 <hr>
- <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script><a href="https://surveynuts.com/en" class="swidget" sid="226677" c="10293855941FRNJ" width="400" height="600" locale="en" scroll="yes">Survey Maker</a><script src="https://surveynuts.com/widget.js" type="text/javascript"></script>
 
- <iframe src="https://surveynuts.com/surveys/take?id=226677&amp;c=10293855941FRNJ" width="%50" hight="50%">
-</iframe>
    
               <h3><b>Please take this Survey about my website:  I'd like to know!</b></h3>  
-              <a href="https://surveynuts.com/surveys/take?id=226677&c=10293855941FRNJ">survey</a>
+ 
+ <iframe src="https://surveynuts.com/surveys/take?id=226677&amp;c=10293855941FRNJ" width="%50" hight="50%">
+</iframe>
+ I fthat dosn't work for you, click this link:
+              <a href="https://surveynuts.com/surveys/take?id=226677&c=10293855941FRNJ">Survey</a>
               
 </body></html></iframe>
 <div class="links">
