--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
   </div>
   
   <div class="maincontent">
-<u><b>THIS IS A WORK IN PROGRESS</b><u>
+<u><b>THIS WEBSITE IS A WORK IN PROGRESS</b></u>
 <hr>
 
    
               <h3><b>Please take this Survey about my website:  I'd like to know!</b></h3>  
  
  <iframe src="https://surveynuts.com/surveys/take?id=226677&amp;c=10293855941FRNJ" width="%50" hight="50%">
-</iframe>
- I fthat dosn't work for you, click this link:
+
+ I that dosn't work for you, click this link:
               <a href="https://surveynuts.com/surveys/take?id=226677&c=10293855941FRNJ">Survey</a>
               
-</body></html></iframe>
+
 <div class="links">
                   <h4>Links:</h4>
 <a href="Dallen's About Me Webpage.html.notfound">About Me Webpage - Under maintenance</a> |
