--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    
               <h3><b>Please take this Survey about my website:  I'd like to know!</b></h3>  
  
- <iframe src="https://surveynuts.com/surveys/take?id=226677&amp;c=10293855941FRNJ" width="%50" hight="50%">
+ <iframe src="https://surveynuts.com/surveys/take?id=226677&amp;c=10293855941FRNJ" style="width:50% height:50%">
 
  I that dosn't work for you, click this link:
               <a href="https://surveynuts.com/surveys/take?id=226677&c=10293855941FRNJ">Survey</a>
