--- a/Art Show/Index.html
+++ b/Art Show/Index.html
@@ -17,11 +17,11 @@
 <body>
 <div class="Title">
 <h1>Art Show</h1>
-<h3>Discrition</h3>
+<h3>Just barely started :)</h3>
 </div>
 
 <div class="MainContent">
-
+  <p> This page will soon have <b>Submissions</b> to the art show.  <br>  The date for the publishment of the art will soon be determined!</p>
 </div>
 
 <div class="Sidebar">
@@ -32,7 +32,7 @@
 
 <div class="Footer">
 <hr>
-<hi>Last Updated: ???</hi>
+<hi>Last Updated: 5/24/2021</hi>
 <hr>
 
 <a href="https://deverellmanning.github.io"><address>deverellmanning.github.io</address></a>
