Update and rename Index.html to index.html

--- a/Art Show/index.html
+++ b/Art Show/index.html
@@ -21,7 +21,9 @@
 </div>
 
 <div class="MainContent">
-  <p> This page will soon have <b>Submissions</b> to the art show.  <br>  The date for the publishment of the art will soon be determined!</p>
+  <p> This page will soon have a <b>Art Submiting Tool</b> to the art show.  <br>  The date for the publishment of the art will soon be determined!</p>
+  <p> The page with the winners? of the the last art show is here: <a href="https://deverellmanning.github.io/Art%20Show/Veiw.html">Art Show Veiw </a><br>
+    But currently the pictures are only place holders.  Soon to change!</p>
 </div>
 
 <div class="Sidebar">
