--- a/About.html
+++ b/About.html
@@ -9,7 +9,7 @@
   
   <meta name="robots" content="noindex, nofollow"><!--change to all to show up on google-->
 
-<link rel="stylesheet" href="DeverellManning.github.io/CSS/Global.css">
+<link rel="https://deverellmanning.github.io/CSS/Global.css">
 <link rel="stylesheet" type="text/css" media="screen" href="Home.css">
 
 </head>
