Import some content

--- a/About.html
+++ b/About.html
@@ -19,7 +19,47 @@
 </div>
 
 <div class="MainContent">
-Coming Soon.
+  <h4><center><b>IN PROGRESS</b></center></h4>
+  <b>Welcome to the in-progress about me page.  This is where you’ll find the where/when/why/how/what/who about my website.</b>
+<h3>Contents:</h3>
+<ul>
+
+<li><a href="#Who Am I?">Who am I?</a></li>
+<li><a href="#What's on it?">What is on this site?</a></li>
+<li><a href="#Basic:">When did I make it?</a></li>
+<li><a href="#Basic:">Where did I put it on the internet?</a></li>
+<li><a href="#Why did I make this Website?">Why did I make it?</a></li>
+<li><a href="#">How did I make it?</a></li>
+</ul>
+<h3>Basic:</h3>
+<p>
+First of all: I, Deverell Manning made this website in October 2020 on GitHub pages.
+</p>
+<h3>What’s on it?</h3>
+<p>
+I am planning on a number of things to be on here:
+</p>
+<ul>
+<li>Pages about Minecraft.</li>
+<li>An art show.</li>
+<li>Public files.</li>
+<li>Info about How I made this site.</li>
+<li>Some of my projects, like eligotextum.</li>
+<li>Resources and links.</li>
+<li>Maybe clubs/ societies info.</li>
+<li>Basically, things I (and my friends) are interested in.</li>
+</ul>
+<h3>Who Am I?</h3>
+<p>My name is Deverell Manning.  It’s not my real name, but, on the internet, I go by Deverell Manning.  You don’t need to know my real name, or where I live, or my exact age.  I’m school aged, and live somewhere in the US.  I fulfill the role of a son and brother in my family.  I like to create things, so art, writing, building, programming, etc.  I have learned to program in C++, HTML, CSS, and some JavaScript.  I like to read, and also play video games.  My favorite game is Minecraft.<br><a href="">Learn More</a></p>
+
+	<p>If you want to contact me, Soon I will set up a system for that to happen.  I can’t just put my email on the site, because I could get spam then, and I’d rather not.  So, you can wait until I can think of a way.  If you have any ideas, please comment below!</p>
+<h3>Why did I make this Website?</h3>
+	I made this site for many reasons.  Some are listed, roughly in order of importance:
+<ul>I just wanted to make my own website, for fun.</ul>
+<ul>I wanted to have an independent place on the internet where I could post whatever I want.</ul>
+<ul>I wanted to have a place to hold information, maybe sell things, and maybe a Minecraft server.</ul>
+<ul>I wanted to experiment with HTML.</ul>
+  
 </div>
 
 <div class="Sidebar">
