--- a/About.html
+++ b/About.html
@@ -1,6 +1,7 @@
 <HTML>
 <head>
-
+	<title>About</title>
+	
 <meta charset="UTF-8">
   <meta name="description" content="Undescribed. Curently . . .">
   <meta name="keywords" content="none">
