--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <!-- Version 1.4 inprogress-->
+	<title>Home of deverellmanning.github.io
+	
   <meta charset="UTF-8">
   <meta name="description" content="Home Page of deverellmanning.github.io">
   <meta name="keywords" content="home, homepage, landing page">
