--- a/Art Show/Veiw.html
+++ b/Art Show/Veiw.html
@@ -10,7 +10,7 @@
   <meta name="robots" content="noindex, nofollow">/*change to all to show up on google*/
 
 <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-<link rel="stylesheet" href="https://deverellmanning.github.io/CSS/styleM.css">
+<link rel="stylesheet" href="https://deverellmanning.github.io/Art Show/AS.css">
 
 </head>
 <body>
