--- a/Art Show/index.html
+++ b/Art Show/index.html
@@ -17,7 +17,6 @@
 <body>
 <div class="Title">
 <h1>Art Show</h1>
-<h3>Just barely started :)</h3>
 </div>
 
 <div class="MainContent">
@@ -39,6 +38,13 @@
 
 <a href="https://deverellmanning.github.io"><address>deverellmanning.github.io</address></a>
 
+  <h3>Suggestions for Art Show:</h3>
+  <!-- begin wwww.htmlcommentbox.com -->
+ <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
+ <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24MZnynKUBwNvJ1siahyHGC%2F"+"&opts=16862&num=10&ts=1622258472506");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+<!-- end www.htmlcommentbox.com -->
+  
 </div>
 
 <div class="Extra"></div>
