--- a/Art Show/index.html
+++ b/Art Show/index.html
@@ -12,7 +12,8 @@
 
 <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
 <link rel="stylesheet" href="https://deverellmanning.github.io/Art Show/AS.css">
-  
+  <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/HTMLCOMMENTBOXSTYLES.css">
+  CSS/HTMLCOMMENTBOXSTYLES.css
 </head>
 <body>
 <div class="Title">
