--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <!-- Version 1.4 inprogress-->
-	<title>Home of deverellmanning.github.io
+	<title>Home of deverellmanning.github.io</title>
 	
   <meta charset="UTF-8">
   <meta name="description" content="Home Page of deverellmanning.github.io">
