--- a/Art Show/Veiw.html
+++ b/Art Show/Veiw.html
@@ -68,7 +68,7 @@
 
 <div class="Footer">
 <hr>
-<hi>Last Updated: ???</hi>
+<hi>Last Updated: 5/28/2021</hi>
 <hr>
 
 <a href="https://deverellmanning.github.io"><address>deverellmanning.github.io</address></a>
