--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 <div class="MainContent">
   <br>
   <h4><u> Welcome to my website! </u></h4>
-  <p>Whether you found it on accident, or you were told about it, welcome to this website.</p>
+  <p>Whether you found it on accident, or you were told about it, welcome to this website.<br>
+	This website has (and will have) content about projects/Things I do on it, but being busy, it's a slow proccess.<br>
+	  <hi>Important!</hi> To find NEWS about this site, head to <a href="./news.html">NEWS</a></p>
 
 
 <div style="position:relative; left:30px;">Important Pages:</div>
@@ -109,7 +111,7 @@
 
 <div class="Footer">
 <hr>
-<hi>Last Updated: 5/28/2021</hi>
+<hi>Last Updated: 9/16/2021</hi>
 <hr>
 <i> page written by Deverell Manning</i>
 <a href="https://deverellmanning.github.io"><address>deverellmanning.github.io</address></a>
