Get ready for news!

--- a/news.html
+++ b/news.html
@@ -10,17 +10,24 @@
   <meta name="robots" content="noindex, nofollow">/*change to all to show up on google*/
 
 <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-<link rel="stylesheet" href="https://deverellmanning.github.io/CSS/styleM.css">
+<link rel="stylesheet" href="https://deverellmanning.github.io/home.css">
 
 </head>
 <body>
 <div class="Title">
-<h1>Title</h1>
-<h3>Discrition</h3>
+<h1>News</h1>
+<h3>About this site</h3>
 </div>
 
 <div class="MainContent">
-
+<table>
+  <tr>
+    <td>
+      
+    </td>
+  </tr>
+  </table>
+  
 </div>
 
 <div class="Sidebar">
