--- a/news.html
+++ b/news.html
@@ -10,7 +10,7 @@
   <meta name="robots" content="noindex, nofollow">/** change to all to show up on google **/
 
 <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-<link rel="stylesheet" href="https://deverellmanning.github.io/home.css">
+<link rel="stylesheet" href="https://deverellmanning.github.io/Home.css">
 
 </head>
 <body>
@@ -24,7 +24,11 @@
   <tr>
     <td>
       <h3>News on 9/16/2021 8:17  -  Deverell Manning</h3>
-      <p></p>
+      <p>Hello! This is where I'm now going to put news, whether it's important,<br> or unimpotant.
+      <br>To get started:</p>
+  </p>First off, I'm constantly busy with school, family-related work, (Garden work, chores, etc.) <br>
+  and many differing projects.<br> So, I put this here to let you all know, this site isn't forgotten!</p>
+  ...
     </td>
   </tr>
   </table>
