Finish the news.

--- a/news.html
+++ b/news.html
@@ -25,10 +25,18 @@
     <td>
       <h3>News on 9/16/2021 8:17  -  Deverell Manning</h3>
       <p>Hello! This is where I'm now going to put news, whether it's important,<br> or unimpotant.
-      <br>To get started:</p>
-  </p>First off, I'm constantly busy with school, family-related work, (Garden work, chores, etc.) <br>
+        <br><b>To get started:</b></p>
+  </p><b>First off,</b> I'm constantly busy with school, family-related work, (Garden work, chores, etc.) <br>
   and many differing projects.<br> So, I put this here to let you all know, this site isn't forgotten!</p>
-  ...
+  <p><b>On a random note:</b><br>
+    I recently found out about these webcomics, and started trying to read them:
+    - <a href="https://ozyandmillie.org/">Ozy and Millie</a>
+    - <a href="https://realmofowls.com/">Realm of Owls</a>
+    - <a href="http://www.rhjunior.com/comics/tales-of-the-questor/">Tales of the Questor</a>
+    - <a href="http://www.rhjunior.com/comics/the-probability-bomb/">The Probability Bomb</a>
+    - <a href="https://www.precociouscomic.com/">Precocious</a>
+    (As far as I know, some of these are fairly obscure, so great job finding them!)</p
+    <b>Thats it for now,</b> so I hope you come back in about two months!
     </td>
   </tr>
   </table>
@@ -43,7 +51,7 @@
 
 <div class="Footer">
 <hr>
-<hi>Last Updated: ???</hi>
+<hi>Last Updated: 9/16/2021</hi>
 <hr>
 
 <a href="https://deverellmanning.github.io"><address>deverellmanning.github.io</address></a>
