--- a/Minecraft/CPM_Mod.html
+++ b/Minecraft/CPM_Mod.html
@@ -34,7 +34,7 @@
 <hr>
 <hi>Last Updated: 11/9/2021</hi>
 <hr>
-<center>
+<center title="I'm in an Avatar: The Last Airbender quotes stage.  Thanks!">
 <p>
 <i><b>Oh, no! I knew it was only a matter of time! <u>Appa ate Momo!</u><br> Momo, I'm coming for you, buddy."</b></i>
 
