--- a/Minecraft/CPM_Mod.html
+++ b/Minecraft/CPM_Mod.html
@@ -11,7 +11,8 @@
   <meta name="robots" content="noindex, nofollow"><!-- change to all to show up on google -->
 
 <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-<link rel="stylesheet" href="https://deverellmanning.github.io/CSS/styleM.css">
+<link rel="stylesheet" href="https://deverellmanning.github.io/Minecraft/icons-minecraft-0.47.css">
+<link rel="stylesheet" href="https://deverellmanning.github.io/Minecraft/http _static.iclanwebsites.com_styles2.css">
 
 </head>
 <body>
@@ -22,6 +23,10 @@
 
 <div class="MainContent">
 <p><i>No Content</i></p>
+  <p>
+    <i class="icon-minecraft icon-minecraft-acacia-log"></i>
+    <i class="icon-minecraft icon-minecraft-acacia-log"></i>
+    <i class="icon-minecraft icon-minecraft-air"></i>
 </div>
 
 <div class="Sidebar">
