--- a/Minecraft/CPM_Mod.html
+++ b/Minecraft/CPM_Mod.html
@@ -13,6 +13,7 @@
 <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
 <link rel="stylesheet" href="https://deverellmanning.github.io/Minecraft/icons-minecraft-0.47.css">
 <link rel="stylesheet" href="https://deverellmanning.github.io/Minecraft/http _static.iclanwebsites.com_styles2.css">
+<link rel="stylesheet" href="https://deverellmanning.github.io/Minecraft/styel.css">
 
 </head>
 <body>
