--- a/Minecraft/CPM_Mod.html
+++ b/Minecraft/CPM_Mod.html
@@ -30,7 +30,7 @@
     <i class="icon-minecraft icon-minecraft-air"></i>
 </div>
 
-<div class="Sidebar">
+<div class="right_panels">
 <iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" style="border:none;" title="Iframe Example" width="100%"></iframe>
 <br>
 <iframe src="https://deverellmanning.github.io/Poll/Test-Poll" style="border:none;" title="Iframe Example" width="100%"></iframe>
