--- a/Minecraft/CPM_Mod.html
+++ b/Minecraft/CPM_Mod.html
@@ -30,10 +30,14 @@
     <i class="icon-minecraft icon-minecraft-air"></i>
 </div>
 
-<div class="right_panels">
+<div class="Sidebar">
+  <div class="panel_top_left">
 <iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" style="border:none;" title="Iframe Example" width="100%"></iframe>
+  </div>
 <br>
+  <div class="panel_top_left">
 <iframe src="https://deverellmanning.github.io/Poll/Test-Poll" style="border:none;" title="Iframe Example" width="100%"></iframe>
+  </div>
 </div>
 
 <div class="Footer">
