--- a/Minecraft/CPM_Mod.html
+++ b/Minecraft/CPM_Mod.html
@@ -31,7 +31,7 @@
 </div>
 
 <div class="Sidebar">
-  <div class="panel_top_left">
+  <div class="panel_top_right">
 <iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" style="border:none;" title="Iframe Example" width="100%"></iframe>
   </div>
 <br>
