--- a/Minecraft/CPM_Mod.html
+++ b/Minecraft/CPM_Mod.html
@@ -12,7 +12,7 @@
 
 <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
 <link rel="stylesheet" href="https://deverellmanning.github.io/Minecraft/icons-minecraft-0.47.css">
-<link rel="stylesheet" href="https://deverellmanning.github.io/Minecraft/MCSS1.css">
+<!--<link rel="stylesheet" href="https://deverellmanning.github.io/Minecraft/MCSS1.css"> -->
 <link rel="stylesheet" href="https://deverellmanning.github.io/Minecraft/styel1.css">
 
 </head>
