--- a/Minecraft/CPM_Mod.html
+++ b/Minecraft/CPM_Mod.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="https://deverellmanning.github.io/Minecraft/styel1.css">
 
 </head>
-<body class="Page">
+<body class="Page" width="75%">
 <div class="Title">
 <h1>Minecraft: Custom Player Model Mod</h1>
 <h3>The CPM mod has wonderfull player customazion abilities...</h3>
