Slight Format change + Filler text
added things for WAY better style

--- a/Minecraft/CPM_Mod.html
+++ b/Minecraft/CPM_Mod.html
@@ -13,10 +13,12 @@
 <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
 <link rel="stylesheet" href="https://deverellmanning.github.io/Minecraft/icons-minecraft-0.47.css">
 <!--<link rel="stylesheet" href="https://deverellmanning.github.io/Minecraft/MCSS1.css"> -->
-<link rel="stylesheet" href="https://deverellmanning.github.io/Minecraft/styel1.css">
+<link rel="stylesheet" href="./styel1.css">
 
 </head>
-<body class="Page" width="75%">
+
+<body>
+<div class="Page">
 <div class="Title">
 <h1>Minecraft: Custom Player Model Mod</h1>
 <h3>The CPM mod has wonderfull player customazion abilities...</h3>
@@ -28,6 +30,11 @@
     <i class="icon-minecraft icon-minecraft-acacia-log"></i>
     <i class="icon-minecraft icon-minecraft-acacia-log"></i>
     <i class="icon-minecraft icon-minecraft-air"></i>
+    <h3>Lorem ipsum,</h3> dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Feugiat in ante metus dictum. Amet porttitor eget dolor morbi non arcu risus. Arcu vitae elementum curabitur vitae nunc sed velit dignissim. Mus mauris vitae ultricies leo integer malesuada nunc vel risus. Sodales neque sodales ut etiam sit amet nisl. Amet purus gravida quis blandit. In nulla posuere sollicitudin aliquam ultrices sagittis orci. Lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque. Semper quis lectus nulla at volutpat. Luctus venenatis lectus magna fringilla urna. Ac felis donec et odio pellentesque diam volutpat. Turpis tincidunt id aliquet risus feugiat in ante. Vel risus commodo viverra maecenas accumsan lacus vel facilisis volutpat. Feugiat nibh sed pulvinar proin gravida hendrerit. Mattis enim ut tellus elementum sagittis. Suscipit tellus mauris a diam.<br>
+
+<h4>Enim sed faucibus</h4> turpis in eu mi. Etiam sit amet nisl purus in mollis nunc sed. Tortor pretium viverra suspendisse potenti nullam ac tortor vitae. Malesuada fames ac turpis egestas sed. Ac turpis egestas sed tempus urna et pharetra pharetra massa. Vestibulum lectus mauris ultrices eros in cursus. Ornare massa eget egestas purus viverra. Lacus vel facilisis volutpat est velit. In hendrerit gravida rutrum quisque non tellus orci. Augue eget arcu dictum varius duis at. Lacus luctus accumsan tortor posuere ac.<br>
+
+<h4>Sit amet</h4> cursus sit amet dictum. Quis varius quam quisque id diam vel. <i>Lorem donec massa sapien.</i> faucibus et molestie ac feugiat. Neque aliquam vestibulum morbi blandit cursus. Eget nullam non nisi est sit amet facilisis magna. Cursus in hac habitasse platea. Magna fringilla urna porttitor rhoncus dolor purus non. Nibh venenatis cras sed felis. A lacus vestibulum sed arcu. Mattis rhoncus urna neque viverra justo nec ultrices. Ullamcorper malesuada proin libero nunc. Turpis nunc eget lorem dolor. Nullam non nisi est sit amet facilisis magna. Varius quam quisque id diam vel quam elementum. Egestas pretium aenean pharetra magna ac.<br>
 </div>
 
 <div class="Sidebar">
@@ -57,6 +64,6 @@
 </div>
 
 <div class="Extra"></div>
-
+</div>
 </body>
 </HTML>
