Getting ready to add more content
Added more stuff to the main table.

--- a/index.html
+++ b/index.html
@@ -53,17 +53,24 @@
 	  <hi>Important!</hi> To find NEWS about this site, head to <a href="./news.html">NEWS</a></p>
 
 
-<div style="position:relative; left:30px;">Important Pages:</div>
+<div style="position:relative; left:30px;"><u>Important Pages:</u></div>
 <table>
     <tbody>
 	<tr>
 	<th scope="col">Main Pages</th>
 	<td><a href="./About.html">About Site</a></td>
+	<td><a href="./news.html">NEWS</a></td>
+	<td><a href="./Coming.html">Coming Soon</a></td>
 	<td><a href="">Sitemap*</a></td>
+      </tr>
+      <tr>
+	<th scope="col">My Work</th>
+	<td><a href="">Art Gallery*</a></td>
       </tr>
       <tr>
 	<th scope="col">Minecraft</th>
 	<td><a href="./Minecraft">Index</a></td>
+        <td><a href="">The CPM mod*</a></td>
       </tr>
       <tr>
 	<th scope="col">Art Show</th>
@@ -76,9 +83,9 @@
       </tr>
       <tr>
 	<th scope="col">Other</th>
-	<td><a href="./">Link</a></td>
-	<td><a href="./">Link</a></td>
-	<td><a href="./">Link</a></td>
+	<td><a href="https://en.wikipedia.org/wiki/Link_(The_Legend_of_Zelda)">Link</a></td>
+	<td><a href="https://en.wikipedia.org/wiki/Hyperlink">Link</a></td>
+	<td><a href="https://en.wikipedia.org/wiki/Link">Link</a></td>
       </tr>
     </tbody>
    </table>
