--- a/Me/art.html
+++ b/Me/art.html
@@ -3,7 +3,7 @@
 
 <meta charset="UTF-8">
   
-  <title>???</title>
+  <title>DM Art</title>
   
   <meta name="description" content="It's an art gallery!">
   <meta name="keywords" content="none">
@@ -14,7 +14,7 @@
 
 <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
 <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/styleM.css">
-
+<link rel="stylesheet" href="./styelart.css">
 </head>
 <body>
 <div class="Title">
@@ -23,6 +23,30 @@
 
 <div class="MainContent">
 To be continued...
+<br>
+<br>
+<hr>
+<br>
+<br>
+<hr>
+<br>
+<br>
+<hr><br>
+<br>
+<hr><br>
+<br>
+<hr><br>
+<br>
+<hr><br>
+<br>
+<hr><br>
+<br>
+<hr><br>
+<br>
+<hr><br>
+<br>
+<hr>
+grigijg
 </div>
 
 <div class="Sidebar">
@@ -32,11 +56,10 @@ To be continued...
 </div>
 
 <div class="Footer">
-<hr>
-<hi>Last Updated: 11/10/2021/hi>
-<hr>
+<hi>Last Updated: 11/10/2021>
+<div>
   QUOTE GOES HERE
-<hr>
+</div>
 <a href="https://deverellmanning.github.io"><address>deverellmanning.github.io</address></a>
 
 </div>
